// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`./SpendingLimitLabel.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="flex items-center gap-1 "
    >
      <mock-icon
        class="size-6 text-[var(--color-border-main)]"
      />
      <p
        class="m-0 text-base leading-6 font-normal"
        data-slot="typography"
        data-variant="paragraph"
      >
        100 ETH per day
      </p>
    </div>
  </div>
</div>
`;

exports[`./SpendingLimitLabel.stories OneTime 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="flex items-center gap-1 "
    >
      <p
        class="m-0 text-base leading-6 font-normal"
        data-slot="typography"
        data-variant="paragraph"
      >
        50 ETH
      </p>
    </div>
  </div>
</div>
`;

exports[`./SpendingLimitLabel.stories WithCustomLabel 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="flex items-center gap-1 "
    >
      <mock-icon
        class="size-6 text-[var(--color-border-main)]"
      />
      <p
        class="m-0 text-base leading-6 font-semibold text-primary"
        data-slot="typography"
        data-variant="paragraph-bold"
      >
        Custom spending limit
      </p>
    </div>
  </div>
</div>
`;
